--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -568,7 +568,7 @@ crossorigin=""/>
 </div> <!-- fin body -->
 
 <div class="modal-footer">
-  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Fermer</button>
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
 </div> <!-- fin footer -->
 
 </div> <!-- fin content -->
