--- a/html/_/index.html
+++ b/html/_/index.html
@@ -344,7 +344,7 @@ crossorigin=""/>
 
   <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b><b lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></h2>
   <br>
-  <span id="modalbody-componat" class="textitem2" style="background-color: blue;"></span></span></p>
+  <div style="background-color: red;"><span id="modalbody-componat" class="textitem2" style="background-color: blue;"></span></span></div></p>
 
 </div>
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent">
