--- a/html/_/index.html
+++ b/html/_/index.html
@@ -82,7 +82,7 @@ crossorigin=""/>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <a class="btn  save_map_status_on_leaving" role="button" href="../scentree.html"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
+  <a class="btn  save_map_status_on_leaving" role="button" href="../scentree.html"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
 </div>
 
 <div class="row h-25 align-items-start">
@@ -344,7 +344,7 @@ crossorigin=""/>
 
   <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b><b lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></h2>
   <br>
-  <div class="text-center" style="background-color: red;"><span id="modalbody-componat" class="textitem2"></span></span></div></p>
+  <div class="text-center"><span id="modalbody-componat" class="textitem2"></span></span></div></p>
 
 </div>
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent">
