the lists of descriptors - the one in english - was not sorted by alphabetical order

--- a/html/_/descriptors__descripteurs.html
+++ b/html/_/descriptors__descripteurs.html
@@ -48,14 +48,24 @@ crossorigin=""/>
   
   <p lang="fr">Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </p>
    <p lang="en"><i>Scentree</i> project is using a pool of olfactive families and descriptors to classify the whole raw materials available on the website. Find them below :</p>
-<div class="row"> 
+<div class="row" lang="en"> 
 <div class="col-lg-6 text-center">
-  <b><u><span lang="fr">Familles Principales :</span><span lang="en">Families : </span></u></b>
-  <ul id="Listefamilles-Familles-principales"></ul>
+  <b><u>Families : </u></b>
+  <ul id="Listefamilles-Familles-principales-EN"></ul>
 </div>
 <div class="col-lg-6 text-center">
-  <b><u><span lang="fr">Descripteurs secondaires :</span><span lang="en">Descriptions : </span></u></b>
-  <ul id="Listefamilles-Descripteurs-secondaires"></ul>
+  <b><u>Descriptions : </u></b>
+  <ul id="Listefamilles-Descripteurs-secondaires-EN"></ul>
+</div>
+</div>
+<div class="row" lang="fr">
+<div class="col-lg-6 text-center">
+  <b><u>Familles Principales : </u></b>
+  <ul id="Listefamilles-Familles-principales-FR"></ul>
+</div>
+<div class="col-lg-6 text-center">
+  <b><u>Descripteurs secondaires : </u></b>
+  <ul id="Listefamilles-Descripteurs-secondaires-FR"></ul>
 </div>
 </div>
 
