the lists of ingredients - the ones in english - were not sorted by alphabetical order

--- a/html/_/ingredients.html
+++ b/html/_/ingredients.html
@@ -45,16 +45,24 @@ crossorigin=""/>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside2">
   
-<div class="row">
+<div class="row" lang="en">
 <div class="col-lg-6 text-center">
-  <span lang="fr"><b><u>Ingrédients Naturels :</u></b></span>
-  <span lang="en"><b><u>Naturals :</u></b></span>
-  <ul id="listeMP-Ingredients-naturels"></ul>
+  <span><b><u>Naturals : </u></b></span>
+  <ul id="listeMP-Ingredients-naturels-EN"></ul>
 </div>
 <div class="col-lg-6 text-center">
-  <span lang="fr"><b><u>Ingrédients Synthétiques :</u></b></span>
-  <span lang="en"><b><u>Synthetics :</u></b></span>
-  <ul id="listeMP-Ingredients-synthetiques"></ul>
+  <span><b><u>Synthetics :</u></b></span>
+  <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
+</div>
+</div>
+<div class="row" lang="fr">
+<div class="col-lg-6 text-center">
+  <span><b><u>Ingrédients Naturels : </u></b></span>
+  <ul id="listeMP-Ingredients-naturels-FR"></ul>
+</div>
+<div class="col-lg-6 text-center">
+  <span><b><u>Ingrédients Synthétiques : </u></b></span>
+  <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
 </div>
 </div>
 
