--- a/html/_/index.html
+++ b/html/_/index.html
@@ -98,9 +98,9 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-25 align-items-center  text-center">
+<div class="row h-25 align-items-center text-center">
   <div class="col">
-<!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
+<a class="btn  text-underline font-weight-bold  mt-5 mb-5 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Les nouveautées de ScenTree !</span><span lang="en">News from ScenTree !</span></a>
   <a class="btn  text-underline font-weight-bold  mt-5 mb-5 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
 </div>
 </div>
