--- a/html/_/index.html
+++ b/html/_/index.html
@@ -100,39 +100,38 @@ crossorigin=""/>
 
 <div class="row h-25 align-items-center text-center">
   <div class="col">
-  <a class="btn  text-underline font-weight-bold  mt-3 mb-1 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
-  <a class="btn  text-underline font-weight-bold  mt-1 mb-5 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Les nouveautés de ScenTree !</span><span lang="en">News from ScenTree !</span></a>
+    <a class="btn  text-underline font-weight-bold  mt-3 mb-1 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
+    <a class="btn  text-underline font-weight-bold  mt-1 mb-3 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Les nouveautés de ScenTree !</span><span lang="en">News from ScenTree !</span></a>
+  </div>
 </div>
-</div>
+
 <div class="row h-25 align-items-end">
-<div class="container-fluid  text-center">
+<div class="container-fluid text-center">
 <div class="row">
-<div class="col-12 col-md-6 p-0">
-  <a class="btn btn-sm  text-underline save_map_status_on_leaving" role="button" href="../_/sources.html">
-    <span lang="fr">Sources</span><span lang="en">Sources</span>
-  </a>
-</div>
-<div class="col-12 col-md-6 p-0">
-  <a class="btn btn-sm  text-underline  save_map_status_on_leaving" role="button" href="../_/contacts.html">
-  <span lang="fr">Contacts</span><span lang="en">Contacts</span>
-  </a>
-</div>
-<div class="col-12 col-md-6 p-0">
-  <button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesMentionsLegales">
-   <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
-  </button>
-</div>
-
-<div class="col-12 col-md-6 p-0 pl-2">
-<div class="container-fluid">
-<div class="row">
-<div class="col-4 p-0" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
-<div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
-<div class="col-4 p-0"><a class="twitter_button" href="https://www.twitter.com/Scentree1" target="_blank"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-25px" /></a></div>
-</div>
-</div>
-</div>
-
+  <div class="col-12 col-md-6 p-0">
+    <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
+      <span lang="fr">Sources</span><span lang="en">Sources</span>
+    </a>
+  </div>
+  <div class="col-12 col-md-6 p-0">
+    <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/contacts.html">
+    <span lang="fr">Contacts</span><span lang="en">Contacts</span>
+    </a>
+  </div>
+  <div class="col-12 col-md-6 p-0">
+    <button class="btn btn-sm" type="button" data-toggle="modal" data-target="#lesMentionsLegales">
+     <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
+    </button>
+  </div>
+  <div class="col-12 col-md-6 p-0 pl-2">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4 p-0" ><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
+        <div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree.co/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
+        <div class="col-4 p-0"><a class="twitter_button" href="https://www.twitter.com/Scentree1" target="_blank"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-25px" /></a></div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="copyright m-top-15-percent mb-3  row  d-none d-sm-none d-md-block">
