--- a/html/_/index.html
+++ b/html/_/index.html
@@ -105,7 +105,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-15 align-items-end" style="background-color: blue;">
+<div class="row h-15 mt-2 align-items-end" style="background-color: blue;">
   <div class="container-fluid text-center">
     <div class="row">
       <div class="col-12 col-md-6 p-0">
@@ -133,7 +133,7 @@ crossorigin=""/>
         </div>
       </div>
     </div>
-    <div class="copyright m-top-5-percent mb-3  row  d-none d-sm-none d-md-block">
+    <div class="copyright m-top-10-percent mb-3  row  d-none d-sm-none d-md-block">
       <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
     </div>
   </div>
