--- a/html/_/index.html
+++ b/html/_/index.html
@@ -98,16 +98,16 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-35 align-items-center text-center" style="background-color: red;">
+<div class="row h-25 align-items-center text-center">
   <div class="col">
     <a class="btn  text-underline font-weight-bold  mt-2 mb-1 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
     <a class="btn  text-underline font-weight-bold  mt-1 mb-5 px-0  text-in-color-brown text-in-size-14px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
   </div>
 </div>
 
-<div class="row h-15 mt-3 align-items-end" style="background-color: blue;">
+<div class="row h-15 mt-2 align-items-end" style="background-color: blue;">
   <div class="container-fluid text-center">
-    <div class="row">
+    <div class="row mt-2">
       <div class="col-12 col-md-6 p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
