--- a/html/_/index.html
+++ b/html/_/index.html
@@ -105,9 +105,9 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-15 mt-2 align-items-end" style="background-color: blue;">
+<div class="row h-15 mt-2 align-items-end">
   <div class="container-fluid text-center">
-    <div class="row mt-2">
+    <div class="row">
       <div class="col-12 col-md-6 p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
