--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -50,13 +50,12 @@ crossorigin=""/>
   <p lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </p>
   <br>
   <p lang="fr">Nous avons choisi de créer cette fenêtre d'information afin de vous tenir au courant des nouveautés et des mises à jour hebdomadaires du site. Ainsi, chaque dimanche soir, entre 5 et 7 nouveaux ingredients (et leurs monographies) sont ajoutés dans la classification.</p>
-  
+  <div class="col-12" style="height: 10px;"></div>
   <p>Voici une liste chronologique retracant les dates de publication des ingrédients ainsi que les étapes marquantes du projet et de son développement général : </p>
 
-  <br>
-<div class="col-12" style="height: 20px;"></div>
+<div class="col-12" style="height: 10px;"></div>
 
-  <p><b><span lang="fr">Ouvrages : </span><span lang="en">Books : </span></b>
+  <p><b><span lang="fr">Novembre 2017 : </span><span lang="en">November 2017 : </span></b>
   <uL>
     <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
     <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
@@ -80,41 +79,7 @@ crossorigin=""/>
     <li>Ernst T. Theimer, Academic Press Inc. (London), “Fragrance Chemistry The Science of the Sense of Smell”, United Kingdom Edition, 1982, 631 pages. ISBN : 978-1-2993-6448-6</li>
   </uL>
   </p>
-  <p><b><span lang="fr">Sites internets :</span><span lang="en">Websites : </span></b>
-  <ul>
-    <li><a href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
-    <li><a href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
-    <li><a href="https://www.thegoodscentscompany.com" target ="_BLANK"> https://www.thegoodscentscompany.com </a></li>
-    <li><a href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
-    <li><a href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
-    <li><a href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
-    <li><a href="https://www.mane.com" target ="_BLANK"> https://www.mane.com </a></li>
-    <li><a href="https://www.albertvieille.com" target ="_BLANK"> https://www.albertvieille.com </a></li>
-    <li><a href="https://www.fragrantica.com/notes/" target ="_BLANK"> https://www.fragrantica.com/</a></li>
-    <li><a href="https://commons.wikimedia.org/" target ="_BLANK"> https://commons.wikimedia.org/</a></li>
-    <li><a href="http://ultranl.com/market/" target ="_BLANK"> http://ultranl.com/market/</a></li>
-  </ul>
-  </p>
-  <p><b><span lang="fr">Fiches de données de sécurité :</span><span lang="en">Safety data sheets : </span></b>
-
-  <span lang="fr">L'ensemble des données techniques présentées dans <i>ScenTree</i> sont issues de FDS provenant des sociétés majeures de l'industrie de la parfumerie.</span><span lang="en">The whole technical data given by <i>ScenTree</i> was sourced from SDS coming for major companies of the perfumery area.</p>
-
-  <p lang="fr"><b>Autres sources d'informations :</b></p>
-  <p lang="en"><b>Other sources of information :</b></p>
-
-  <p lang="fr">Une partie des données présentées dans cette classification ne sont pas sourcées. Elles proviennent en effet de la collaboration avec plusieurs professionnels du monde de la parfumerie, comme le veux notre protocole de classification des matières premières.</p>
-  <p lang="en">Part of the data provided by this classification is not sourced. It comes from our collaboration with a few olfaction and perfumery experts, as our raw materials classification protocol wishes to.</p>
-
-  <p lang="fr">Pour toute interrogation sur nos sources, se référer à la rubrique « Contacts ».</p>
-  <p lang="en">For any request concerning our sources, please refer to the “contacts” heading.</p>
-
-</div>
-
-</div>
-
-</div>
-</div>
-</div>
+  
 
 </main>
 
