--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -55,6 +55,17 @@ crossorigin=""/>
 
 <div class="col-12" style="height: 10px;"></div>
 
+  <p><b><span lang="fr">08/12/19 : </span></b>
+  <uL>
+    <li>Rhum Brun Absolue (CAS N°: 90604-30-1)</li>
+    <li>Vétiver Haïti HE (CAS N°: 8016-96-4) </li>
+    <li>Nectarol<sup>©</sup> (CAS N°: BASE)</li>
+    <li>Amyris HE (CAS N°: 8015-65-4)</li>
+    <li>Cacao Absolue (CAS N°: 8002-31-1)</li>
+    <li>Jonquille Absolue (CAS N°: 8023-75-4)</li>
+    <li>Acétate de cinnamyl (CAS N°: 103-54-8)</li>
+  </uL>
+  </p>
   <p><b><span lang="fr">Novembre 2017 : </span><span lang="en">November 2017 : </span></b>
   <uL>
     <li>Naissance du projet</li>
