--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -34,7 +34,7 @@ crossorigin=""/>
 
 
 <div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="lesSources">
-<div class="modal-dialog modal-xl" role="document">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
 
 
