--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -46,9 +46,7 @@ crossorigin=""/>
 <div class="modal-body text-size-14px text-justify scrollbar-inside2">
 
 <div class="source">
-  <p lang="fr">Le projet <i>ScenTree</i> est née il y a deux ans. Depuis ce moment, nous travaillons à l'amélioration du site internet, de son contenu et à l'incrémantation de la base de donnée.</p>
-  <br>
-  <p lang="fr">Nous avons choisi de créer cette fenêtre d'information afin de vous tenir au courant des nouveautés et des mises à jour hebdomadaires du site. Ainsi, chaque dimanche soir, entre 5 et 7 nouveaux ingredients (et leurs monographies) sont ajoutés dans la classification.</p>
+  <p lang="fr">Le projet <i>ScenTree</i> est née il y a deux ans. Depuis ce moment, nous travaillons à l'amélioration du site internet, de son contenu et à l'incrémantation de la base de donnée. Nous avons choisi de créer cette fenêtre d'information afin de vous tenir au courant des nouveautés et des mises à jour hebdomadaires du site. Ainsi, chaque dimanche soir, entre 5 et 7 nouveaux ingredients (et leurs monographies) sont ajoutés dans la classification.</p>
   <div class="col-12" style="height: 10px;"></div>
   <p>Voici une liste chronologique retracant les dates de publication des ingrédients ainsi que les étapes marquantes du projet et de son développement général : </p>
 
