Essai incrémentation timeline

--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -52,22 +52,64 @@ crossorigin=""/>
 
 <div class="col-12" style="height: 10px;"></div>
 
-  <p><b><span lang="fr">08/12/19 : </span></b>
-  <uL>
-    <li>Rhum Brun Absolue (CAS N°: 90604-30-1)</li>
-    <li>Vétiver Haïti HE (CAS N°: 8016-96-4) </li>
-    <li>Nectarol<sup>©</sup> (CAS N°: BASE)</li>
-    <li>Amyris HE (CAS N°: 8015-65-4)</li>
-    <li>Cacao Absolue (CAS N°: 8002-31-1)</li>
-    <li>Jonquille Absolue (CAS N°: 8023-75-4)</li>
-    <li>Acétate de cinnamyl (CAS N°: 103-54-8)</li>
-  </uL>
-  </p>
-  <p><b><span lang="fr">Novembre 2017 : </span><span lang="en">November 2017 : </span></b>
-  <uL>
-    <li>Naissance du projet</li>
-  </uL>
-  </p>
+  <div class="timeline col-12">
+		<ul>
+			<li>
+				<div class="content">
+					<h3 id="heading1">08/12/19</h3>
+					<p>
+					    <br>Rhum Brun Absolue (CAS N°: 90604-30-1)
+					    <br>Vétiver Haïti HE (CAS N°: 8016-96-4)
+					    <br>Nectarol<sup>©</sup> (CAS N°: BASE)
+					    <br>Amyris HE (CAS N°: 8015-65-4)
+					    <br>Cacao Absolue (CAS N°: 8002-31-1)
+					    <br>Jonquille Absolue (CAS N°: 8023-75-4)
+					    <br>Acétate de cinnamyl (CAS N°: 103-54-8)
+			        </p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<h3 id="heading2">01/12/19</h3>
+					<p>
+			            <br>Acétate de Phényléthyle (CAS N°: 103-45-7)
+						<br>Acétate de trans-2-Hexènyle (CAS N°: 2497-18-9)
+						<br>Cis-6-Nonènal (CAS N°: 2277-19-2)
+						<br>Mousse d'arbre Absolue (CAS N°: 90028-67-4)
+						<br>Pin Sylvestre HE (CAS N°: 8023-99-2)
+						<br>Trans-2-Hexènal (CAS N°: 6728-26-3)
+        			</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<h3 id="heading3">24/11/19</h3>
+					<p>
+						<br>Cade HE (CAS N°: 8013-10-3)
+						<br>Méthyl Isoeugenol (CAS N°: 93-16-3)
+						<br>Phényl Acétate d'Amyle (CAS N°: 5137-52-0)
+						<br>Sauge Sclarée HE (CAS N°: 8016-63-5)
+						<br>Sulfurol (CAS N°: 137-00-8)
+					</p>
+				</div>
+			</li>
+			<li>
+				<div class="content">
+					<h3 id="heading4">17/11/19</h3>
+					<p>
+						<br>Amberketal® (CAS N°:  57345-19-4)
+						<br>Boisambrène Forte® (CAS N°: 58567-11-6)
+						<br>Cédrol (CAS N°: 77-53-2)
+						<br>Giroflier Feuilles HE (CAS N°: 8000-34-8)
+						<br>Pino Acétaldéhyde (CAS N°: 33885-51-7)
+						<br>Troenan® (CAS N°: 80480-24-6)
+						<br>Violiff® (CAS N°: 87731-18-8)
+					</p>
+				</div>
+			</li>
+			<div style="clear:both;"></div>
+		</ul>
+	</div>
   
 
 </main>
