--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -50,8 +50,7 @@ crossorigin=""/>
   <div class="col-12" style="height: 10px;"></div>
   <p>Voici une liste chronologique retracant les dates de publication des ingrédients ainsi que les étapes marquantes du projet et de son développement général : </p>
 
-
-  <div class="timeline col-12">
+  <div class="timeline pt-0 col-12">
     <ul>
       <li>
         <div class="content">
