--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -49,8 +49,9 @@ crossorigin=""/>
   <p lang="fr">Le projet <i>ScenTree</i> est née il y a deux ans. Depuis ce moment, nous travaillons à l'amélioration du site internet, de son contenu et à l'incrémantation de la base de donnée. Nous avons choisi de créer cette fenêtre d'information afin de vous tenir au courant des nouveautés et des mises à jour hebdomadaires du site. Ainsi, chaque dimanche soir, entre 5 et 7 nouveaux ingredients (et leurs monographies) sont ajoutés dans la classification.</p>
   <div class="col-12" style="height: 10px;"></div>
   <p>Voici une liste chronologique retracant les dates de publication des ingrédients ainsi que les étapes marquantes du projet et de son développement général : </p>
+</div>
 
-  <div class="timeline pt-0 col-12">
+  <div class="timeline col-12">
     <ul>
       <li>
         <div class="content">
