--- a/html/_/descriptors__descripteurs.html
+++ b/html/_/descriptors__descripteurs.html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Classification innovante des ingrédients parfum</title>
-<title lang="en">ScenTree - The new collaborative perfumery raw materials classification</title>
+<title lang="fr">ScenTree - Les descripteurs olfactifs</title>
+<title lang="en">ScenTree - Olfactive descriptors</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
