--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -55,8 +55,8 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
-          <h3 id="heading1">8 décembre 2019 
-            <br><b>Ajout de 7 nouvelles matières premières</b>
+          <h3 id="heading12">8 décembre 2019 
+            <br>Ajout de 7 nouvelles matières premières
           </h3>
           <p>
               <br>Rhum Brun Absolue (CAS N°: 90604-30-1)
@@ -71,7 +71,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading2">2 et 3 décembre 2019</h3>
+          <h3 id="heading11">2 et 3 décembre 2019</h3>
           <p>
             <br>Parution d’un article dans la Newsletter de Perfumer & Flavorist
             <br>Parution d’un article sur le site de <a href="https://www.perfumerflavorist.com/fragrance/application/multiuse/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target ="_BLANK"> Perfumer & Flavorist </a> et de <a href="https://www.gcimagazine.com/marketstrends/segments/fragrance/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target ="_BLANK"> Global Cosmetic Industry </a>            
@@ -80,7 +80,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading2">1<sup>er</sup> décembre 2019
+          <h3 id="heading10">1<sup>er</sup> décembre 2019
             <br><b>Ajout de 7 nouvelles matières premières</b>
           </h3>
           <p>
@@ -95,7 +95,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading3">24 novembre 2019
+          <h3 id="heading9">24 novembre 2019
             <br><b>Ajout de 5 nouvelles matières premières</b>
           </h3>
           <p>
@@ -110,7 +110,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading4">17 novembre 2019
+          <h3 id="heading8">17 novembre 2019
             <br><b>Ajout de 7 nouvelles matières premières</b>
           </h3>
           <p>
@@ -126,7 +126,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading4">13 novembre 2019</h3>
+          <h3 id="heading7">13 novembre 2019</h3>
           <p>
             Conférence donnée à La Place, accueillis par Virginie Roux
           </p>
@@ -134,7 +134,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading4">12 novembre 2019
+          <h3 id="heading6">12 novembre 2019
             <br><b>Ajout de 7 nouvelles matières premières</b>
           </h3>
           <p>
@@ -150,7 +150,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading4">11 novembre 2019</h3>
+          <h3 id="heading5">11 novembre 2019</h3>
           <p>
             ScenTree parait intégralement traduit en anglais
           </p>
@@ -166,7 +166,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading4">21 octobre 2019</h3>
+          <h3 id="heading3">21 octobre 2019</h3>
           <p>
             Signature de notre premier contrat avec <a href="https://www.cinquiemesens.com/coworking/" target ="_BLANK">Cinquième Sens Co-Working</a> 
           </p>
@@ -174,7 +174,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading4">22 septembre 2019</h3>
+          <h3 id="heading2">22 septembre 2019</h3>
           <p>
             Parution d’un article sur le <a href="http://espritdeparfum.com/scentree-plateforme-dinformations-sur-les-matieres-premieres/" target ="_BLANK">blog </a>de Sylvaine Delacourt
           </p>
@@ -182,7 +182,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading4">22 septembre 2019
+          <h3 id="heading1">22 septembre 2019
             <br><b>Lancement de ScenTree au grand public
             <br><a href="https://www.nez-larevue.fr/magazine/entretiens/scentree-tout-le-monde-a-besoin-dune-source-fiable-pour-les-matieres-premieres-de-parfumerie/" target ="_BLANK">Participation</a> de la revue Nez</b>
           </h3>
