--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -59,7 +59,7 @@ crossorigin=""/>
             <br>Ajout de 7 nouvelles matières premières
           </h3>
           <p>
-              <br>Rhum Brun Absolue (CAS N°: 90604-30-1)
+              Rhum Brun Absolue (CAS N°: 90604-30-1)
               <br>Vétiver Haïti HE (CAS N°: 8016-96-4)
               <br>Nectarol<sup>©</sup> (CAS N°: BASE)
               <br>Amyris HE (CAS N°: 8015-65-4)
@@ -73,7 +73,7 @@ crossorigin=""/>
         <div class="content">
           <h3 id="heading11">2 et 3 décembre 2019</h3>
           <p>
-            <br>Parution d’un article dans la Newsletter de Perfumer & Flavorist
+            Parution d’un article dans la Newsletter de Perfumer & Flavorist
             <br>Parution d’un article sur le site de <a href="https://www.perfumerflavorist.com/fragrance/application/multiuse/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target ="_BLANK"> Perfumer & Flavorist </a> et de <a href="https://www.gcimagazine.com/marketstrends/segments/fragrance/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target ="_BLANK"> Global Cosmetic Industry </a>            
               </p>
         </div>
@@ -84,7 +84,7 @@ crossorigin=""/>
             <br><b>Ajout de 7 nouvelles matières premières</b>
           </h3>
           <p>
-            <br>Acétate de Phényléthyle (CAS N°: 103-45-7)
+            Acétate de Phényléthyle (CAS N°: 103-45-7)
             <br>Acétate de trans-2-Hexènyle (CAS N°: 2497-18-9)
             <br>Cis-6-Nonènal (CAS N°: 2277-19-2)
             <br>Mousse d'arbre Absolue (CAS N°: 90028-67-4)
@@ -99,7 +99,7 @@ crossorigin=""/>
             <br><b>Ajout de 5 nouvelles matières premières</b>
           </h3>
           <p>
-            <br>Cade HE (CAS N°: 8013-10-3)
+            Cade HE (CAS N°: 8013-10-3)
             <br>Méthyl Isoeugenol (CAS N°: 93-16-3)
             <br>Phényl Acétate d'Amyle (CAS N°: 5137-52-0)
             <br>Sauge Sclarée HE (CAS N°: 8016-63-5)
@@ -114,7 +114,7 @@ crossorigin=""/>
             <br><b>Ajout de 7 nouvelles matières premières</b>
           </h3>
           <p>
-            <br>Amberketal® (CAS N°:  57345-19-4)
+            Amberketal® (CAS N°:  57345-19-4)
             <br>Boisambrène Forte® (CAS N°: 58567-11-6)
             <br>Cédrol (CAS N°: 77-53-2)
             <br>Giroflier Feuilles HE (CAS N°: 8000-34-8)
@@ -138,7 +138,7 @@ crossorigin=""/>
             <br><b>Ajout de 7 nouvelles matières premières</b>
           </h3>
           <p>
-            <br>Sureau Absolue (CAS N°: 68916-55-2)
+            Sureau Absolue (CAS N°: 68916-55-2)
             <br>Orivone® (CAS N°: 16587-71-6)
             <br>DihydroEugénol (CAS N°: 2785-87-7)
             <br>Algénone SP® (CAS N°: BASE)
