--- a/html/_/index.html
+++ b/html/_/index.html
@@ -106,7 +106,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-15 align-items-end">
+<div class="row h-15 align-items-end" style="background-color:blue;">
   <div class="container-fluid text-center">
     <div class="row">
       <div class="col-12 col-md-6 p-0">
