--- a/html/_/index.html
+++ b/html/_/index.html
@@ -99,7 +99,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="row h-25 align-items-center text-center">
+<div class="row h-25 align-items-center text-center" style="background-color:grey;">
   <div class="col">
     <a class="btn  text-underline font-weight-bold  mt-2 mb-1 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
     <a class="btn  text-underline font-weight-bold  mt-1 mb-5 px-0  text-in-color-brown text-in-size-14px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
