--- a/html/_/index.html
+++ b/html/_/index.html
@@ -87,7 +87,7 @@ crossorigin=""/>
 </div>
 
 <div class="row h-25 align-items-start" style="background-color:green;">
-  <div class="col-12 align-self-end">
+  <div class="col-12 align-items-center">
     <div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <div class="col-12 text-center align-self-start">
