--- a/html/_/index.html
+++ b/html/_/index.html
@@ -90,8 +90,8 @@ crossorigin=""/>
   <div class="col-12 align-items-center">
     <div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
-  <div class="col-12 text-center align-self-start">
   <!--Recherche -->
+  <div class="col-12 text-center align-items-center">
   <form class="" action="" autocomplete="off" id="searchForm">
     <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
     <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
