--- a/html/_/index.html
+++ b/html/_/index.html
@@ -88,10 +88,10 @@ crossorigin=""/>
 
 <div class="row h-25 align-items-start" style="background-color:green;">
   <div class="col-12 align-items-center">
-    <div class="text-underline font-weight-bold text-size-1-5vw  mt-3 mb-1  d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
+    <div class="text-underline font-weight-bold text-size-1-5vw  mt-3 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <!--Recherche -->
-  <div class="col-12 text-center align-items-start">
+  <div class="col-12 text-center align-items-start" style="background-color:red;">
   <form class="" action="" autocomplete="off" id="searchForm">
     <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
     <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
