--- a/html/_/index.html
+++ b/html/_/index.html
@@ -86,8 +86,8 @@ crossorigin=""/>
   <a class="btn  save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
 </div>
 
-<div class="row h-25 align-items-start" style="background-color:green;">
-  <div class="col-12 align-items-center">
+<div class="row h-15 align-items-start" style="background-color:green;">
+  <div class="col-12 align-items-center m-0">
     <div class="text-underline font-weight-bold text-size-1-5vw  mt-3 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <!--Recherche -->
