--- a/html/_/index.html
+++ b/html/_/index.html
@@ -73,7 +73,7 @@ crossorigin=""/>
 
 <!-- Cette classe container est divisée en 2 partie, mapblock (partie de gauche) et rightblock (partie de droite avec le logo la recherche etc etc) -->
 
-<div id="menu-block" class="d-none d-md-flex  col-md-3  h-100 fillright">
+<div id="menu-block" class="d-none d-md-flex  col-md-3 h-100 fillright">
 <div class="container-fluid">
 
 <div class="row h-25 align-items-start" style="background-color:white;">
@@ -86,12 +86,12 @@ crossorigin=""/>
   <a class="btn  save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
 </div>
 
-<div class="row h-15 align-items-start" style="background-color:green;">
+<div class="row h-5 align-items-start" style="background-color:green;">
   <div class="col-12 align-items-center m-0">
     <div class="text-underline font-weight-bold text-size-1-5vw  mt-3 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <!--Recherche -->
-  <div class="col-12 text-center align-items-start" style="background-color:red;">
+  <div class="col-12 text-center align-items-start">
   <form class="" action="" autocomplete="off" id="searchForm">
     <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
     <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
