--- a/html/_/index.html
+++ b/html/_/index.html
@@ -88,7 +88,7 @@ crossorigin=""/>
 
 <div class="row h-20 align-items-start" style="background-color:green;">
   <div class="col-12 align-items-center m-0">
-    <div class="text-underline font-weight-bold text-size-1-5vw  mt-3 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
+    <div class="text-underline font-weight-bold text-size-1-5vw d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
   </div>
   <!--Recherche -->
   <div class="col-12 text-center align-items-start">
