--- a/html/_/index.html
+++ b/html/_/index.html
@@ -83,7 +83,7 @@ crossorigin=""/>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
-  <a class="btn  save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
+  <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logonoel.png" alt="le logo de Scentree"></a>
 </div>
 
 <div class="row h-20 align-items-start" style="background-color:green;">
@@ -102,7 +102,7 @@ crossorigin=""/>
 <div class="row h-45 align-items-start text-center" style="background-color:grey;">
   <div class="col">
     <a class="btn  text-underline font-weight-bold  mt-2 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
-    <a class="btn  text-underline font-weight-bold  mt-1 mb-5 px-0  text-in-color-brown text-in-size-14px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
+    <a class="btn  text-underline font-weight-bold  mt-1 mb-15 text-in-color-brown text-in-size-14px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
   </div>
 </div>
 
