--- a/html/_/index.html
+++ b/html/_/index.html
@@ -104,8 +104,9 @@ crossorigin=""/>
     <a class="btn  text-underline font-weight-bold  mt-2 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
     <a class="btn  text-underline font-weight-bold  mt-1 mb-15 text-in-color-brown text-in-size-14px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
   </div>
-  <div class="col">
-  	<input type="email" id="email" name="email"></input>
+  <div class="col-12 align-items-center m-0">
+    <div class="text-underline font-weight-bold text-size-1-5vw d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span>
+  	<input class="email mt-2" type="email" id="email" name="email"></input>
   </div>		
 </div>
 
