--- a/html/_/index.html
+++ b/html/_/index.html
@@ -105,7 +105,7 @@ crossorigin=""/>
     <a class="btn  text-underline font-weight-bold  mt-1 mb-15 text-in-color-brown text-in-size-14px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
   </div>
   <div class="col-12 align-items-center m-0">
-    <p class="text-size-1vw d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span>
+    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span>
   	<input class="email mt-2" type="email" id="email" name="email"></input>
   	</p>
   </div>		
