--- a/html/_/index.html
+++ b/html/_/index.html
@@ -76,7 +76,7 @@ crossorigin=""/>
 <div id="menu-block" class="d-none d-md-flex  col-md-3 h-100 fillright">
 <div class="container-fluid">
 
-<div class="row h-20 align-items-start" style="background-color:white;">
+<div class="row h-10 align-items-start" style="background-color:white;">
   <div class="clearfix w-100">
     <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.png" alt="ScenTree in english" class="imgen">
     </button>
@@ -102,7 +102,7 @@ crossorigin=""/>
 <div class="row h-45 align-items-start text-center" style="background-color:grey;">
   <div class="col">
     <a class="btn  text-underline font-weight-bold  mt-2 mb-1 text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
-    <a class="btn  text-underline font-weight-bold  mt-1 mb-15 text-in-color-brown text-in-size-14px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
+    <a class="btn  text-underline font-weight-bold  mt-1 text-in-color-brown text-in-size-14px  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés !</span><span lang="en">News from ScenTree !</span></a>
   </div>		
 </div>
 
