--- a/html/_/index.html
+++ b/html/_/index.html
@@ -108,11 +108,12 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end" style="background-color:blue;">
   <div class="container-fluid text-center">
-   <div class="col-12 align-items-center m-0">
+   <form class="col-12 align-items-center m-0" action="">
 	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span>
-	  	<input class="email mt-2" type="email" id="email" name="email"></input>
+	  	<input class="email mt-2" type="email" id="email" name="email"><br>
+	  	<input type="submit" value="S'inscrire">
 	  	</p>
-  </div>
+  </form>
     <div class="row">
       <div class="col-12 col-md-6 p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
