--- a/html/_/index.html
+++ b/html/_/index.html
@@ -110,7 +110,7 @@ crossorigin=""/>
   <div class="container-fluid text-center">
    <form class="col-12 align-items-center m-0" action="">
 	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span>
-	  	<input class="email mt-2" type="email" id="email" name="email"><br>
+	  	<input class="email mt-2" type="email" id="email" name="email" placeholder="Saisir une adresse mail.."><br>
 	  	<input type="submit" value="S'inscrire">
 	  	</p>
   </form>
