--- a/html/_/index.html
+++ b/html/_/index.html
@@ -114,7 +114,7 @@ crossorigin=""/>
 	  	<input type="submit" value="S'inscrire">
 	  	</p>
   </form>
-    <div class="row">
+    <div class="row" style="background-color:white;">
       <div class="col-12 col-md-6 p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
