--- a/html/_/index.html
+++ b/html/_/index.html
@@ -108,13 +108,13 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end" style="background-color:blue;">
   <div class="container-fluid text-center">
-   <form class="col-12 align-items-center m-0" action="">
+   <form class="col-12 align-items-center m-0 p-0" action="">
 	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span>
 	  	<input class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
 	  	<input type="submit" value="S'inscrire">
 	  	</p>
   </form>
-    <div class="row" style="background-color:white;">
+    <div class="row p-0 m-0" style="background-color:white;">
       <div class="col-12 col-md-6 p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
