--- a/html/_/index.html
+++ b/html/_/index.html
@@ -114,7 +114,7 @@ crossorigin=""/>
 	  	<input type="submit" value="S'inscrire">
 	  	</p>
   </form>
-    <div class="row p-0 m-0" style="background-color:white;">
+    <div class="row p-0 m-0">
       <div class="col-12 col-md-6 p-0">
         <a class="btn btn-sm save_map_status_on_leaving" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
@@ -140,7 +140,7 @@ crossorigin=""/>
         </div>
       </div>
     </div>
-    <div class="copyright m-top-10-percent mb-1  row  d-none d-sm-none d-md-block">
+    <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
       <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
     </div>
   </div>
