--- a/html/_/index.html
+++ b/html/_/index.html
@@ -111,8 +111,10 @@ crossorigin=""/>
   <div class="container-fluid text-center">
    <form class="col-12 align-items-center m-0 p-0" action="">
 	    <p class="item d-none d-sm-none d-md-block"><span lang="fr">Inscrivez-vous à notre newletter:</span><span lang="en">Register for our newletter :</span>
-	  	<input class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
-	  	<input type="submit" value="S'inscrire">
+	  	<input lang="fr" class="email" type="email" id="email" name="email" placeholder="Saisir une adresse mail..">
+	  	<input lang="en" class="email" type="email" id="email" name="email" placeholder="Enter an email address..">
+	  	<input lang="fr" type="submit" value="S'inscrire">
+	  	<input lang="en" type="submit" value="Register">
 	  	</p>
   </form>
     <div class="row p-0 m-0">
